force-app/main/default/objects/VCC_Recent_View__c/VCC_Recent_View__c.object-meta.xml
<CustomObject>
    <label>VCC Recent View</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>VCC Recent View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCC Recent View</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>