force-app/main/default/objects/VCC_Recent_View__c/fields/VCC_Account__c.field-meta.xml
<CustomField>
    <fullName>VCC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCC Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VCC Recent View</relationshipLabel>
    <relationshipName>VCC_Recent_View</relationshipName>
    <type>Lookup</type>
</CustomField>