force-app/main/default/objects/VCC_Recent_View__c/fields/VCC_Recent_View_Reset__c.field-meta.xml
<CustomField>
    <fullName>VCC_Recent_View_Reset__c</fullName>
    <description>This field is used for the VAHC team to reset the recent view record timer when a user completes a scheduling action</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recent View Reset</label>
    <type>DateTime</type>
</CustomField>