force-app/main/default/objects/VCC_Recent_View__c/fields/VCC_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Type__c</fullName>
    <label>VCC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flags</fullName>
            </value>
            <value>
                <fullName>SensitivePatient</fullName>
            </value>
            <value>
                <fullName>VerifyPatient</fullName>
            </value>
            <value>
                <fullName>InPatient</fullName>
            </value>
            <value>
                <fullName>FacilityAccess</fullName>
            </value>
            <value>
                <fullName>PharmacyVerified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>