force-app/main/default/objects/VCC_Recent_View__c/fields/VCC_Type_Flags__c.field-meta.xml
<CustomField>
    <fullName>VCC_Type_Flags__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a flag that the recent view is of type Flags</description>
    <label>VCC Type - Flags</label>
    <type>Checkbox</type>
</CustomField>