force-app/main/default/objects/VCC_Recent_View__c/fields/VCC_Type_In_Patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Type_In_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the recent view is of type In Patient.</description>
    <label>VCC Type - In Patient</label>
    <type>Checkbox</type>
</CustomField>